[tool.poetry]
name = "poetry-example"
version = "0.1.0"
description = ""
authors = ["ryotoitoi <ryoto.tennis0813@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
transformers = "^4.11.3"
pandas = "^1.3.4"
torch = "^1.10.0"
pytorch-lightning = "^1.4.9"
scipy = "1.6"
sklearn = "^0.0"
mojimoji = "^0.0.11"
neologdn = "^0.5.1"
emoji = "^1.6.1"
onnx = "^1.10.1"
onnxruntime = "^1.9.0"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
