[tool.poetry]
name = "poetry-example"
version = "0.1.0"
description = ""
authors = ["ryotoitoi <ryoto.tennis0813@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
transformers = "^4.11.3"
pandas = "^1.3.4"
torch = "^1.10.0"
pytorch-lightning = "^1.4.9"
scipy = "1.6"
sklearn = "^0.0"
mojimoji = "^0.0.11"
neologdn = "^0.5.1"
emoji = "^1.6.1"
onnx = "^1.10.1"
onnxruntime = "^1.9.0"
Django = "^3.2.8"
streamlit = "^1.1.0"
wordcloud = "^1.8.1"
django-bootstrap5 = "^2.1.2"
nlplot = "^1.4.0"
plotly = "^5.3.1"
python-dotenv = "^0.19.1"
psycopg2-binary = "^2.9.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
