[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ryotoitoi <ryoto.tennis0813@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
torch = "^1.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
