[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ryotoitoi <ryoto.tennis0813@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
torch = "^1.10.0"
transformers = "^4.11.3"
twint = "^2.1.20"
nest-asyncio = "^1.5.1"
beautifulsoup4 = "^4.10.0"
tqdm = "^4.62.3"
neologdn = "^0.5.1"
pytorch-lightning = "^1.4.9"
emoji = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
